# NMS-Translator

./: NMS_Translator.spec  README.md  build_exe.py  pyproject.toml
src/nms_translator.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/translator/: __init__.py  cli.py  core.py  gui.py
src/translator/data/: translations.txt
tests/: test_translator.py
